# athena_v3

./: .env  .gitignore  README.md  Task_Executive_Assistant_Chatbot.md  package-lock.json  package.json  render.yaml
app/: .env.example  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
app/.next/: app-build-manifest.json  build-manifest.json  trace
app/src/: middleware.ts
python-server/: CONFIRMATION_FIX_SUMMARY.md  Dockerfile  README.md  agent-2.py  agent.py  agent_main.py  agent_main_backup.py  config.py  demo_llm_tests.py  generate_pngs.sh  langgraph.json  main.py  memory.py  render.yaml  requirements.txt  tools.py  visualize_langgraph.py
python-server/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
python-server/docs/: AGENT_ENHANCEMENTS.md  LANGGRAPH_UPGRADE_SUMMARY.md  README.md  README_LANGGRAPH.md  athena_langgraph_architecture.md  detailed_flow.md  enhanced_availability_demo.md  main_flow_20250617_010858.mmd  main_flow_20250617_010948.mmd  main_flow_20250617_030754.mmd  state_diagram_20250617_010858.mmd  state_diagram_20250617_010948.mmd  state_diagram_20250617_011844.mmd
python-server/studio/: README.md  langgraph.json  langgraph_studio.env.example  pyproject.toml  setup_studio.py  studio_agent.py
python-server/tests/: README.md  __init__.py  demo_llm_tests.py  (+6 more)
sql/: add_oauth_tokens.sql  create_calendar_list.sql  create_user_details.sql
tasks/: PRD_Executive_Assistant_Chatbot.md  Task_Executive_Assistant_Chatbot.md  create-prd.mdc
(+56 files in other folders)
